## Process this file with automake to produce Makefile.in.
##
## $XORP: xorp/contrib/Makefile.am,v 1.1 2004/06/10 16:14:42 hodson Exp $
##

################################################################
##
## Everything past here is useful to the maintainer, but probably not
## to anybody else
##

# --- Stop compilation here if not using GNU make
-include NON_EXISTANT_GNUMAKEFILE
